Change fonts routes

--- a/styles/_fonts.scss
+++ b/styles/_fonts.scss
@@ -1,166 +1,166 @@
 @font-face {
   font-family: "Anek";
-  src: url("../public/fonts/Anek_Kannada/AnekKannada-VariableFont_wdth,wght.ttf");
+  src: url("/fonts/Anek_Kannada/AnekKannada-VariableFont_wdth,wght.ttf");
 }
 
 @font-face {
   font-family: "Anek-bold";
-  src: url("../public/fonts/Anek_Kannada/static/AnekKannada/AnekKannada-Bold.ttf");
+  src: url("/fonts/Anek_Kannada/static/AnekKannada/AnekKannada-Bold.ttf");
 }
 
 @font-face {
   font-family: "Anek-extralight";
-  src: url("../public/fonts/Anek_Kannada/static/AnekKannada/AnekKannada-ExtraLight.ttf");
+  src: url("/fonts/Anek_Kannada/static/AnekKannada/AnekKannada-ExtraLight.ttf");
 }
 
 @font-face {
   font-family: "Anek-light";
-  src: url("../public/fonts/Anek_Kannada/static/AnekKannada/AnekKannada-Light.ttf");
+  src: url("/fonts/Anek_Kannada/static/AnekKannada/AnekKannada-Light.ttf");
 }
 
 @font-face {
   font-family: "Anek-medium";
-  src: url("../public/fonts/Anek_Kannada/static/AnekKannada/AnekKannada-Medium.ttf");
+  src: url("/fonts/Anek_Kannada/static/AnekKannada/AnekKannada-Medium.ttf");
 }
 
 @font-face {
   font-family: "Anek-regular";
-  src: url("../public/fonts/Anek_Kannada/static/AnekKannada/AnekKannada-Regular.ttf");
+  src: url("/fonts/Anek_Kannada/static/AnekKannada/AnekKannada-Regular.ttf");
 }
 
 @font-face {
   font-family: "Anek-semibold";
-  src: url("../public/fonts/Anek_Kannada/static/AnekKannada/AnekKannada-SemiBold.ttf");
+  src: url("/fonts/Anek_Kannada/static/AnekKannada/AnekKannada-SemiBold.ttf");
 }
 
 @font-face {
   font-family: "Anek-thin";
-  src: url("../public/fonts/Anek_Kannada/static/AnekKannada/AnekKannada-Thin.ttf");
+  src: url("/fonts/Anek_Kannada/static/AnekKannada/AnekKannada-Thin.ttf");
 }
 
 @font-face {
   font-family: "Cairo";
-  src: url("../public/fonts/Cairo/Cairo-VariableFont_wght.ttf");
+  src: url("/fonts/Cairo/Cairo-VariableFont_wght.ttf");
 }
 
 @font-face {
   font-family: "Cairo-black";
-  src: url("../public/fonts/Cairo/static/Cairo-Black.ttf");
+  src: url("/fonts/Cairo/static/Cairo-Black.ttf");
 }
 
 @font-face {
   font-family: "Cairo-bold";
-  src: url("../public/fonts/Cairo/static/Cairo-Bold.ttf");
+  src: url("/fonts/Cairo/static/Cairo-Bold.ttf");
 }
 
 @font-face {
   font-family: "Cairo-extrabold";
-  src: url("../public/fonts/Cairo/static/Cairo-ExtraBold.ttf");
+  src: url("/fonts/Cairo/static/Cairo-ExtraBold.ttf");
 }
 
 @font-face {
   font-family: "Cairo-extralight";
-  src: url("../public/fonts/Cairo/static/Cairo-ExtraLight.ttf");
+  src: url("/fonts/Cairo/static/Cairo-ExtraLight.ttf");
 }
 
 @font-face {
   font-family: "Cairo-light";
-  src: url("../public/fonts/Cairo/static/Cairo-Light.ttf");
+  src: url("/fonts/Cairo/static/Cairo-Light.ttf");
 }
 
 @font-face {
   font-family: "Cairo-medium";
-  src: url("../public/fonts/Cairo/static/Cairo-Medium.ttf");
+  src: url("/fonts/Cairo/static/Cairo-Medium.ttf");
 }
 
 @font-face {
   font-family: "Cairo-regular";
-  src: url("../public/fonts/Cairo/static/Cairo-Regular.ttf");
+  src: url("/fonts/Cairo/static/Cairo-Regular.ttf");
 }
 
 @font-face {
   font-family: "Cairo-semibold";
-  src: url("../public/fonts/Cairo/static/Cairo-Semibold.ttf");
+  src: url("/fonts/Cairo/static/Cairo-Semibold.ttf");
 }
 
 @font-face {
   font-family: "Plus-Jakarta";
-  src: url("../public/fonts/Plus_Jakarta_Sans/PlusJakartaSans-VariableFont_wght.ttf");
+  src: url("/fonts/Plus_Jakarta_Sans/PlusJakartaSans-VariableFont_wght.ttf");
 }
 
 @font-face {
   font-family: "Plus-Jakarta-italic";
-  src: url("../public/fonts/Plus_Jakarta_Sans/PlusJakartaSans-Italic-VariableFont_wght.ttf");
+  src: url("/fonts/Plus_Jakarta_Sans/PlusJakartaSans-Italic-VariableFont_wght.ttf");
 }
 
 @font-face {
   font-family: "Plus-Jakarta-bold";
-  src: url("../public/fonts/Plus_Jakarta_Sans/static/PlusJakartaSans-Bold.ttf");
+  src: url("/fonts/Plus_Jakarta_Sans/static/PlusJakartaSans-Bold.ttf");
 }
 
 @font-face {
   font-family: "Plus-Jakarta-bold-italic";
-  src: url("../public/fonts/Plus_Jakarta_Sans/static/PlusJakartaSans-BoldItalic.ttf");
+  src: url("/fonts/Plus_Jakarta_Sans/static/PlusJakartaSans-BoldItalic.ttf");
 }
 
 @font-face {
   font-family: "Plus-Jakarta-extra-bold";
-  src: url("../public/fonts/Plus_Jakarta_Sans/static/PlusJakartaSans-ExtraBold.ttf");
+  src: url("/fonts/Plus_Jakarta_Sans/static/PlusJakartaSans-ExtraBold.ttf");
 }
 
 @font-face {
   font-family: "Plus-Jakarta-extra-bold-italic";
-  src: url("../public/fonts/Plus_Jakarta_Sans/static/PlusJakartaSans-ExtraBoldItalic.ttf");
+  src: url("/fonts/Plus_Jakarta_Sans/static/PlusJakartaSans-ExtraBoldItalic.ttf");
 }
 
 @font-face {
   font-family: "Plus-Jakarta-extra-light";
-  src: url("../public/fonts/Plus_Jakarta_Sans/static/PlusJakartaSans-ExtraLight.ttf");
+  src: url("/fonts/Plus_Jakarta_Sans/static/PlusJakartaSans-ExtraLight.ttf");
 }
 
 @font-face {
   font-family: "Plus-Jakarta-extra-light-italic";
-  src: url("../public/fonts/Plus_Jakarta_Sans/static/PlusJakartaSans-ExtraLightItalic.ttf");
+  src: url("/fonts/Plus_Jakarta_Sans/static/PlusJakartaSans-ExtraLightItalic.ttf");
 }
 
 @font-face {
   font-family: "Plus-Jakarta-italic-font";
-  src: url("../public/fonts/Plus_Jakarta_Sans/static/PlusJakartaSans-Italic.ttf");
+  src: url("/fonts/Plus_Jakarta_Sans/static/PlusJakartaSans-Italic.ttf");
 }
 
 @font-face {
   font-family: "Plus-Jakarta-light";
-  src: url("../public/fonts/Plus_Jakarta_Sans/static/PlusJakartaSans-Light.ttf");
+  src: url("/fonts/Plus_Jakarta_Sans/static/PlusJakartaSans-Light.ttf");
 }
 
 @font-face {
   font-family: "Plus-Jakarta-light-italic";
-  src: url("../public/fonts/Plus_Jakarta_Sans/static/PlusJakartaSans-LightItalic.ttf");
+  src: url("/fonts/Plus_Jakarta_Sans/static/PlusJakartaSans-LightItalic.ttf");
 }
 
 @font-face {
   font-family: "Plus-Jakarta-medium";
-  src: url("../public/fonts/Plus_Jakarta_Sans/static/PlusJakartaSans-Medium.ttf");
+  src: url("/fonts/Plus_Jakarta_Sans/static/PlusJakartaSans-Medium.ttf");
 }
 
 @font-face {
   font-family: "Plus-Jakarta-medium-italic";
-  src: url("../public/fonts/Plus_Jakarta_Sans/static/PlusJakartaSans-MediumItalic.ttf");
+  src: url("/fonts/Plus_Jakarta_Sans/static/PlusJakartaSans-MediumItalic.ttf");
 }
 
 @font-face {
   font-family: "Plus-Jakarta-regular";
-  src: url("../public/fonts/Plus_Jakarta_Sans/static/PlusJakartaSans-Regular.ttf");
+  src: url("/fonts/Plus_Jakarta_Sans/static/PlusJakartaSans-Regular.ttf");
 }
 
 @font-face {
   font-family: "Plus-Jakarta-semibold";
-  src: url("../public/fonts/Plus_Jakarta_Sans/static/PlusJakartaSans-SemiBold.ttf");
+  src: url("/fonts/Plus_Jakarta_Sans/static/PlusJakartaSans-SemiBold.ttf");
 }
 
 @font-face {
   font-family: "Plus-Jakarta-semibold-italic";
-  src: url("../public/fonts/Plus_Jakarta_Sans/static/PlusJakartaSans-SemiBoldItalic.ttf");
+  src: url("/fonts/Plus_Jakarta_Sans/static/PlusJakartaSans-SemiBoldItalic.ttf");
 }
 
 .anek {
